# robot_assisted_cleaning_solution

./: CMakeLists.txt  README.md  package.xml
Image/: frames.gv
config/: costmap_common_params.yaml  global_costmap_params.yaml  joint_names_robot_v12.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
launch/: display.launch  gazebo.launch  mapping.launch  navigation.launch  real_robot.launch  robot.launch  teb.launch
maps/: half_office.pgm  half_office.yaml  office_map.pgm  office_map.yaml  one_lidar.pgm  one_lidar.yaml
meshes/: base_link.STL  caster_1.STL  caster_2.STL  caster_3.STL  ir_1.STL  ir_2.STL  lidar_1.STL  lidar_2.STL  us_1.STL  us_2.STL  wheel_2.STL
rviz/: amcl.rviz  gmapping.rviz  navigation.rviz  range.rviz  robot_model.rviz  scan.rviz
scripts/: odom_pub.py  range_pub.py
urdf/: robot_assisted_cleaning_solution.csv  robot_assisted_cleaning_solution.gazebo.xacro  robot_assisted_cleaning_solution.urdf  robot_assisted_cleaning_solution.urdf.xacro
